@@ -1,3 +1,9 @@
+1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* ObjectLoader.m, ObjectSaver.m: Don't include stdio.h.
+
+	* AppendFile.m, InFile.m, OutFile.m: Include misc.h instead of stdio.h.
+
 1998-12-12  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* simtools.m (init): New internal function.
